<resources>
    <string name="app_name">Mements</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mements</string>
    <string name="nav_header_subtitle">Members &amp; Events</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_members">Members</string>
    <string name="menu_events">Events</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="signal">Signal</string>
    <string name="telegram">Telegram</string>
    <string name="family">Family</string>
    <string name="bio">Bio</string>
    <string name="email">Email</string>
    <string name="nick_name">Nick Name</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="full_name">Full Name</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="facebook">Facebook</string>
    <string name="phone_number">Phone Number</string>
    <string name="web">Web</string>
    <string name="gone">gone</string>
    <string name="search">Search</string>
    <string name="action_search" />
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="star">Star</string>
    <string name="title_activity_prefs">PrefsActivity</string>
    <string name="favourite">Favourite</string>
    <string name="restore_data">Restore Data</string>
    <string name="backup_data">Backup Data</string>
    <string name="import_csv">Import (CSV)</string>
    <string name="export_all_csv">Export All (CSV)</string>
    <string name="export_member_csv">Export Member (CSV)</string>
    <string name="import_member">Import Member</string>
    <string name="dob">Date of Birth</string>
    <string name="update_profile_picture">Update Profile Picture</string>
    <string name="event_details">Details</string>
    <string name="event_place">Place</string>
    <string name="event_venue">Venue</string>
    <string name="event_admins">Admins</string>
    <string name="event_participants">Participants</string>
    <string name="event_start_date">Start Date</string>
    <string name="event_start_time">Start Time</string>
    <string name="event_end_date">End Date</string>
    <string name="event_end_time">End Time</string>

    <string name="event_name">Event</string>
    <string name="import_event">Import Event</string>
    <string name="export_event_csv">Export Event (CSV)</string>
    <string name="export_event">Export Event</string>
    <string name="events">Events</string>
    <string name="preferences">Preferences</string>
    <string name="db_storage_dir">Export Data Storage: Download/</string>
    <string name="app_theme">Theme</string>
    <string name="members_name_swap">Swap Name with NickName</string>
    <string name="menu_settings">Settings</string>
    <string name="app_developer">🄯 Suresh P</string>
    <string name="app_licence">Licence: GNU GPL 3.0+</string>
    <string name="menu_about">About</string>
    <string name="attachment_summary_off" />
    <string name="attachment_summary_on" />
    <string name="attachment_title" />
    <string name="sync_title" />
    <string name="sync_header" />
    <string name="signature_title" />
    <string name="messages_header" />
    <string name="settings">Settings</string>
    <string name="is_all_day_event">All Day Event</string>
    <string name="contact_app">Contact App</string>
    <string name="social">Social</string>
    <string name="contact">Contact</string>
    <string name="add_member_event">Add Event as Admin</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="reply_title">Default reply action</string>
    <string name="title">Title</string>
    <string name="ok">OK</string>
    <string name="group_title">Group</string>
    <string name="group_subtitle">Group Detail</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="app_source_url">https://github.com/p-suresh/mements</string>

</resources>