<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_members"
    tools:ignore="InvalidNavigation">
    <fragment
        android:id="@+id/nav_members"
        android:name="app.sudroid.mements.ui.members.MembersFragment"
        android:label="@string/menu_members"
        tools:layout="@layout/fragment_members" />
    <fragment
        android:id="@+id/nav_events"
        android:name="app.sudroid.mements.ui.events.EventsFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_events" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="app.sudroid.mements.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>