<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.sudroid.mements.AboutActivity">

    <include layout="@layout/toolbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="192dp"
        android:layout_marginBottom="192dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            app:srcCompat="@drawable/mements" />

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:fontFamily="serif"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/tv_about_dev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_developer"
            android:textAlignment="center"
            android:textSize="14sp"
            android:layout_weight="0.02" />

        <TextView
            android:id="@+id/tv_about_licence"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="0.1"
            android:text="@string/app_licence"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_about_source"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="0.3"
            android:text="@string/app_source_url"
            android:autoLink="web"
            android:textAlignment="center"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>